# tidytuesday-tuition

./: .gitignore  diversity.py  pyproject.toml  random.ipynb  streamlit_app.py  tuition_income_level.py  tuition_salary.py  us_map.py
