[project]
name = "random"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly-express>=0.4.1",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
]
